@@ -23,6 +23,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.example.bequiz.utils.Constants.QUESTION;
 import static com.example.bequiz.utils.Constants.QUIZ;
@@ -62,7 +63,7 @@ public class QuizService {
 
     private List<Question> getQuestions(CreateQuizDTO createQuizDTO) {
         return createQuizDTO.getQuestions().stream()
-                .map(id -> questionRepository.findById(id).orElseThrow(() -> new EntityValidationException(ErrorCode.NOT_FOUND, QUESTION))).toList();
+                .map(id -> questionRepository.findById(id).orElseThrow(() -> new EntityValidationException(ErrorCode.NOT_FOUND, QUESTION))).collect(Collectors.toList());
     }
 
     @Transactional
